# nqrduck-measurement

./: README.md  pyproject.toml
src/nqrduck_measurement/: __init__.py  controller.py  measurement.py  model.py  signalprocessing_options.py  view.py  widget.py
src/nqrduck_measurement/resources/: measurement_widget.ui
