[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nqrduck-measurement"
version = "0.0.1"
authors = [
  { name="Julia Pfitzer", email="git@jupfi.me" },
]

description = "A module for the NQRduck program (a simple python script™) to perform single frequency measurements."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "pyqt6",
    "sympy",
    "NQRduck",
    "nqrduck-pulseprogrammer",
    "nqrduck-spectrometer",
]

[project.entry-points."nqrduck"]
"nqrduck-measurement" = "nqrduck_measurement.measurement:Measurement"