[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nqrduck-measurement"
version = "0.0.1"
authors = [
  { name="Julia Pfitzer", email="git@jupfi.me" },
]

description = "A module for the NQRduck program (a simple python script™) to perform single frequency measurements."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "pyqt6",
    "sympy",
    "NQRduck",
    "nqrduck-pulseprogrammer",
    "nqrduck-spectrometer",
]

[project.optional-dependencies]
dev = [
    "black",
    "pydocstyle",
    "pyupgrade",
    "ruff",
]


[project.entry-points."nqrduck"]
"nqrduck-measurement" = "nqrduck_measurement.measurement:Measurement"

[tool.ruff]
exclude = [
  "widget.py",
]

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"